Change Font Color

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div>
       <h4>Summary</h4>
+      <h4 id="summary">Summary</h4>
       <p>
         Will studied at the University of Virginia before working
         for Bain & Company in Dallas and Major League Baseball in
@@ -42,14 +43,14 @@
       </div>
     </div>
     <div>
-      <h4>Skills</h4>
+      <h4 class="skills-and-hobbies">Skills</h4>
       <ul>
         <li>Chemistry</li>
         <li>Teaching</li>
       </ul>
     </div>
     <div>
-      <h4>Hobbies</h4>
+      <h4 class="skills-and-hobbies">Hobbies</h4>
       <ul>
         <li>Cooking</li>
       </ul>
