--- a/css.html
+++ b/css.html
@@ -3,10 +3,9 @@
 <head>
   <title>Bootstrap Me</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -20,16 +19,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">IBM</a>
+        <a class="navbar-brand" href="#">Brand</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Products <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Services</a></li>
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
               <li><a href="#">Another action</a></li>
@@ -64,28 +63,55 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="jumbotron">
-    <h1>Really Awesome Headline</h1>
-    <h2>It'll change the way you do whatever</h2>
-    <h3><a href="#" class="btn btn-primary">Really, check it out</a></h3>
-  </div>
-
   <div class="container">
 
-    <div class="row">
-      <div class="col-sm-4">
-        <h4>It's magical.</h4>
-        <p>Rainbows and unicorns.</p>
-      </div>
-      <div class="col-sm-4">
-        <h4>You won't believe it.</h4>
-        <p>It'll do your laundry.</p>
-      </div>
-      <div class="col-sm-4">
-        <h4>It's totally free.</h4>
-        <p>In fact, we pay you.</p>
-      </div>
+    <div class="jumbotron">
+      <h1>Hello, world!</h1>
+      <p>...</p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
+
+    <h1>Bootstrap CSS Demo</h1>
+
+    <h2>Buttons</h2>
+
+    <p>
+      <a class="btn btn-success" href="http://golearntocode.com/">Awesome things</a>
+    </p>
+
+    <h2>Tables</h2>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Occupation</th>
+          <th>Favorite Food</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Brian</td>
+          <td>Nerd</td>
+          <td>Pizza</td>
+        </tr>
+        <tr>
+          <td>Katie</td>
+          <td>Being awesome</td>
+          <td>Tacos</td>
+        </tr>
+        <tr>
+          <td>Jeff</td>
+          <td>Teacher</td>
+          <td>Peanut M&Ms</td>
+        </tr>
+        <tr>
+          <td>Cookie Monster</td>
+          <td>Cookie Eater</td>
+          <td>Kale</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </body>
 </html>
