--- a/index.html
+++ b/index.html
@@ -36,26 +36,29 @@
     </div>
   </nav>
 
-  <div class="jumbotron">
-    <h1>Really Awesome Headline</h1>
-    <h2>It'll change the way you do whatever</h2>
-    <h3><a href="#" class="btn btn-primary">Really, check it out</a></h3>
-  </div>
-
   <div class="container">
 
+    <div class="jumbotron">
+      <h1>Will Landess</h1>
+      <h2>Work Experience</h2>
+      <h3><a href="#" class="btn btn-primary">Really, check it out</a></h3>
+    </div>
+
     <div class="row">
-      <div class="col-sm-4">
-        <h4>It's magical.</h4>
-        <p>Rainbows and unicorns.</p>
+      <div class="col-xs-4 col-md-4">
+        <p><img src="Bain_logo.png" class="img-responsive"></p>
+        <h4 class="text-center">Bain & Company</h4>
+        <p class="text-center">Will worked as a management consultant at Bain from 2011 to 2015 in their Dallas office.</p>
       </div>
-      <div class="col-sm-4">
-        <h4>You won't believe it.</h4>
-        <p>It'll do your laundry.</p>
+      <div class="col-xs-4 col-md-4">
+        <p><img src="MLB_logo.jpg" class="img-responsive"></p>
+        <h4 class="text-center">Major League Baseball Office of the Commissioner</h4>
+        <p class="text-center">Will worked with the Labor Relations Department in the MLB Office of the Commissioner in New York City from October 2014 to March 2015.</p>
       </div>
-      <div class="col-sm-4">
-        <h4>It's totally free.</h4>
-        <p>In fact, we pay you.</p>
+      <div class="col-xs-4 col-md-4">
+        <p><img src="Indians_logo.jpg" class="img-responsive"></p>
+        <h4 class="text-center">Cleveland Indians Front Office</h4>
+        <p class="text-center">Will worked in the Cleveland Indians baseball operations department in the summer of 2016.</p>
       </div>
     </div>
   </div>
