--- a/index.html
+++ b/index.html
@@ -39,23 +39,30 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1>Will Landess</h1>
-      <h2>Work Experience</h2>
-      <h3><a href="#" class="btn btn-primary">Really, check it out</a></h3>
+      <div class="row">
+        <div class="col-md-4">
+          <p><img src="Will Landess Kellogg Picture.jpg" class="img-responsive"></p>
+        </div>
+        <div class="col-md-8">
+          <h1 class="text-center">Will Landess</h1>
+          <h2 class="text-center">Work Experience</h2>
+          <h3><a href="https://www.linkedin.com/in/will-landess-61003189" class="btn btn-primary">LinkedIn</a></h3>
+        </div>
+      </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-4 col-md-4">
+      <div class="col-md-4">
         <p><img src="Bain_logo.png" class="img-responsive"></p>
         <h4 class="text-center">Bain & Company</h4>
         <p class="text-center">Will worked as a management consultant at Bain from 2011 to 2015 in their Dallas office.</p>
       </div>
-      <div class="col-xs-4 col-md-4">
+      <div class="col-md-4">
         <p><img src="MLB_logo.jpg" class="img-responsive"></p>
         <h4 class="text-center">Major League Baseball Office of the Commissioner</h4>
         <p class="text-center">Will worked with the Labor Relations Department in the MLB Office of the Commissioner in New York City from October 2014 to March 2015.</p>
       </div>
-      <div class="col-xs-4 col-md-4">
+      <div class="col-md-4">
         <p><img src="Indians_logo.jpg" class="img-responsive"></p>
         <h4 class="text-center">Cleveland Indians Front Office</h4>
         <p class="text-center">Will worked in the Cleveland Indians baseball operations department in the summer of 2016.</p>
