--- a/Page1.html
+++ b/Page1.html
@@ -38,52 +38,38 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1>Hello, world!</h1>
-      <p>...</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <h1>Management Consulting</h1>
+      <h2>Bain & Company</h2>
+      <p><a class="btn btn-success" href="http://www.bain.com/offices/dallas/en_us/index.aspx">Bain & Company - Dallas Office</a></p>
     </div>
 
-    <h1>Bootstrap CSS Demo</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <h4 class="text-center">Associate Consultant Intern</h4>
+        <ul>
+          <li>Interned at Bain Dallas office summer 2011</li>
+          <li>Worked in the aerospace and defense industry</li>
+          <li>Accepted full-time offer for return after graduation</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h4 class="text-center">Associate Consultant</h4>
+        <ul>
+          <li>Started full-time at Bain Dallas office fall 2012</li>
+          <li>Worked in retail, oil & gas, and telecommunications industries</li>
+          <li>Worked on projects in Dallas and Houston</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h4 class="text-center">Senior Associate Consultant</h4>
+        <ul>
+          <li>Promoted to Senior Associate Consultant summer 2014</li>
+          <li>Worked in the railroad and technology industries</li>
+          <li>Worked on projects in Fort Worth and Austin</li>
+        </ul>
+      </div>
+    </div>
 
-    <h2>Buttons</h2>
-
-    <p>
-      <a class="btn btn-success" href="http://www.bain.com/offices/dallas/en_us/index.aspx">Bain & Company - Dallas Office</a>
-    </p>
-
-    <h2>Tables</h2>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Occupation</th>
-          <th>Favorite Food</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Brian</td>
-          <td>Nerd</td>
-          <td>Pizza</td>
-        </tr>
-        <tr>
-          <td>Katie</td>
-          <td>Being awesome</td>
-          <td>Tacos</td>
-        </tr>
-        <tr>
-          <td>Jeff</td>
-          <td>Teacher</td>
-          <td>Peanut M&Ms</td>
-        </tr>
-        <tr>
-          <td>Cookie Monster</td>
-          <td>Cookie Eater</td>
-          <td>Kale</td>
-        </tr>
-      </tbody>
-    </table>
   </div>
 </body>
 </html>
