--- a/Page2.html
+++ b/Page2.html
@@ -10,7 +10,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -36,56 +35,35 @@
       </div>
     </div>
   </nav>
-  
   <div class="container">
 
     <div class="jumbotron">
-      <h1>Hello, world!</h1>
-      <p>...</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <h1>Baseball Industry</h1>
+      <h2>MLB & Cleveland Indians</h2>
+      <p><a class="btn btn-success" href="http://www.mlb.com/careers/boc/">MLB Office of the Commissioner</a></p>
+      <p><a class="btn btn-success" href="http://www.indians.com">Cleveland Indians</a></p>
+
     </div>
 
-    <h1>Bootstrap CSS Demo</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <h4 class="text-center">MLB Extern</h4>
+        <ul>
+          <li>Externed in New York City at MLB</li>
+          <li>Worked with Labor Relations Department</li>
+          <li>Focused on contract extensions and salary artbitration</li>
+        </ul>
+      </div>
+      <div class="col-md-6">
+        <h4 class="text-center">Cleveland Indians Intern</h4>
+        <ul>
+          <li>Interned with the baseball operations department in the Front Office summer 2016</li>
+          <li>Focused on the amateur player draft, trade deadline, and arbitration-eligible players</li>
+          <li>Attended 2016 ALDS and World Series</li>
+        </ul>
+      </div>
+    </div>
 
-    <h2>Buttons</h2>
-
-    <p>
-      <a class="btn btn-success" href="http://golearntocode.com/">Awesome things</a>
-    </p>
-
-    <h2>Tables</h2>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Occupation</th>
-          <th>Favorite Food</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Brian</td>
-          <td>Nerd</td>
-          <td>Pizza</td>
-        </tr>
-        <tr>
-          <td>Katie</td>
-          <td>Being awesome</td>
-          <td>Tacos</td>
-        </tr>
-        <tr>
-          <td>Jeff</td>
-          <td>Teacher</td>
-          <td>Peanut M&Ms</td>
-        </tr>
-        <tr>
-          <td>Cookie Monster</td>
-          <td>Cookie Eater</td>
-          <td>Kale</td>
-        </tr>
-      </tbody>
-    </table>
   </div>
 </body>
 </html>
