Apply CSS by ID, Element, Class
changed elemnts in styles.css

--- a/Page1.html
+++ b/Page1.html
@@ -7,6 +7,7 @@
   <!-- link the shared stylesheet across all three pages -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -40,7 +41,7 @@
 
     <div class="jumbotron">
       <h1>Management Consulting</h1>
-      <h2>Bain & Company</h2>
+      <h2 id="BainText">Bain & Company</h2>
       <p><a class="btn btn-success" href="http://www.bain.com/offices/dallas/en_us/index.aspx">Bain & Company - Dallas Office</a></p>
     </div>
 
