--- a/Page2.html
+++ b/Page2.html
@@ -7,6 +7,7 @@
   <!-- link the shared stylesheet across all three pages -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -40,7 +41,7 @@
 
     <div class="jumbotron">
       <h1>Baseball Industry</h1>
-      <h2>MLB & Cleveland Indians</h2>
+      <h2 id="MLBText">MLB & Cleveland Indians</h2>
       <p><a class="btn btn-success" href="http://www.mlb.com/careers/boc/">MLB Office of the Commissioner</a></p>
       <p><a class="btn btn-success" href="http://www.indians.com">Cleveland Indians</a></p>
 
