Rounded corners Kellogg pic

--- a/Page1.html
+++ b/Page1.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="http://use.fontawesome.com/f9001c39ac.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -23,7 +24,10 @@
           <span class="icon-bar"></span>
         </button>
         <!--Create home icon to lead you back home from any page-->
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="index.html">
+          <i class="fa fa-home" aria-hidden="true"></i>
+          Home
+        </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
